# bitrix24-docs-mcp

./: .gitignore  Dockerfile  README.md  ROADMAP.md
.github/workflows/: ci.yml
data/: README.md
doc/: Community.md  Documentation.md  Schema_Reference.md  Specification.md
docker/: entrypoint.sh
scripts/: README.md  pyproject.toml
scripts/src/bitrix24_docs_etl/: __init__.py  cli.py  crawl.py  fetch.py  github_ingest.py  index.py  normalize.py  storage.py
scripts/tests/: conftest.py  test_index_build.py
server/: .eslintrc.cjs  README.md  package-lock.json  package.json  tsconfig.json
server/src/: github.ts  index.test.ts  index.ts
